tests/NormalTests/paczka1/small_fuzzy/34847221.err
Error in line 6: b6UhEj8Y S51 15,4
Error in line 7: b6UhEj8Y A466 53,6
Error in line 12: IRpZpU S51 7,1
